# solid-snake

./: Cargo.toml  INSTRUCTIONS.md  README.md  docs.index.html  docs.json  docs.template.html
docs/: index.html
solid-snake-compiler/: Cargo.toml  SYNTAX.md  TODO.md  grammar.pest
solid-snake-compiler/benches/: parse.rs
solid-snake-compiler/src/: ast.rs  bytecode_gen.rs  error_reporting.rs  intermediate_pass1.rs  lib.rs  main.rs  parser.rs  preprocessor.rs  test_util.rs
solid-snake-compiler/src/new_parser/: error.rs  expression.rs  mod.rs  statement.rs  typing.rs
solid-snake-compiler/src/new_parser/lexer/: error.rs  logos_token.rs  mod.rs  token.rs
solid-snake-vm/: Cargo.toml  INSTRUCTIONS.md  docs.index.html  docs.json  docs.template.html  instructions.docs.template.html
solid-snake-vm/plans/: BYTECODE_FILE_FORMAT.md  CONCURRENCY.md  DEBUGGER.md  EMBEDDING.md  FUSED.md  IMPORT.md  NATIVE_EXTENTIONS.md
solid-snake-vm/src/: asm_internal.rs  bytecode_parser.rs  docs.rs  lib.rs  main.rs  opcodes.rs
solid-snake-vm/src/executor/: ext.rs  mod.rs
solid-snake-vm/src/executor/interpreted/: implimentation.rs  mod.rs  opcode_decoder.rs
solid-snake-vm/src/executor/interpreted/opcode_impl/: add.rs  bitwiseand.rs  bitwisenot.rs  bitwiseor.rs  bitwisexor.rs  debug.rs  decr.rs  divide.rs  equal.rs  function.rs  greaterthan.rs  greaterthanorequal.rs  incr.rs  jump.rs  lessthan.rs  lessthanorequal.rs  load.rs  logical.rs  memory.rs  mod.rs  modulo.rs  mov.rs  multiply.rs  notequal.rs  print.rs  shiftleft.rs  shiftright.rs  store.rs  subtract.rs
src/: asm_internal.rs  (+3 more)
(+23 files in other folders)
