[package]
name = "solid-snake-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
solid-snake-vm = { path = "../solid-snake-vm" }
ariadne = "0.5.1"
backtrace = "0.3"
colored = "3.0.0"
console = "0.15.11"
env_logger = "0.11"
log = "0.4"
logos = "0.15.0"
paste = "1.0.15"
pest = "2.8"
pest_derive = "2.8"
regex = "1.11.1"

[dev-dependencies]
criterion = "0.5"
similar = "2.7"
similar-asserts = "1.7.0"
test-case = "3.3.1"

[profile.release]
debug = true

[[bench]]
name = "parse"
harness = false