[package]
name = "solid-snake-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
solid-snake-vm-macros = { path = "../solid-snake-vm-macros" }
env_logger = "0.11.8"
log = "0.4.27"
num_enum = "0.7"
paste = "1.0.15"
rustc_version_runtime = "0.3.0"
strum = "0.27.1"
strum_macros = "0.27.1"
sysinfo = "0.35.0"

[[bin]]
name = "docgen"
path = "src/bin/docgen.rs"